10/9までに完成した分です

--- a/ポートフォリオ/home.html
+++ b/ポートフォリオ/home.html
@@ -20,12 +20,12 @@
              <div class="main-nav">   
                 <nav>
                    <ul class="main-nav"> 
-                     <li><a href="home.html">HOME</a></li>
-                     <li><a href="about.html">ABOUT</a></li>
-                     <li><a href="concept.html">CONCEPT</a></li>
-                     <li><a href="work.html">WORK</a></li>
-                     <li><a href="skill.html">SKILL</a></li>
-                     <li><a href="contact.html">CONTACT</a></li>
+                     <li><a href="#home">HOME</a></li>
+                     <li><a href="#about">ABOUT</a></li>
+                     <li><a href="#concept">CONCEPT</a></li>
+                     <li><a href="#work">WORK</a></li>
+                     <li><a href="#skill">SKILL</a></li>
+                     <li><a href="#contact">CONTACT</a></li>
                    </ul>
                  </nav>
               </div><!-- /.main-nav -->  
@@ -33,34 +33,132 @@
         </header>
 
           <div class="home-content wrapper">
-             <h2 class="page-title h2">Grafelia Design</h2>
+             <h1 class="page-title h1">Grafelia Design</h1>
              <h3 class="page-title h3">Tomoko Yoshida</h3>
              <p>Welcome to my  portfolio.Please take your time.</p>
-             <a class="button" div class="about-content">SWIPE</a>
+             <a class="button" href="#about">SWIPE</></a>
           </div><!-- /.home-content -->
      </div><!-- /#home -->
+     <section id="about">
+            <div class="about-content">
+              <h2 class="page-title">ABOUT</h2>
+               <hr class=”line″>
+               <p>１９９１年生まれ、九州生まれ九州育ち。２児の母。<br>
+                大学進学後、大手アパレル会社で販売職を経験。<br>
+                結婚・出産を機に販売職を退職し、その後保育園関係に就職。<br>
+                現在、WEBデザイナーになるためにオンラインスクールにて勉強中。<br>
+                今後はフリーランスとして活動する予定。<br>
+               </p>
+               <hr class=”line″>
+              <img src="images/about.jpg">
+            </div><!-- /.about-content -->
+            <div class="about-content2">
+              <h3>Character...</h3>
+              <img src="images/about1.jpg">
+            </div><!-- /.about-content2 -->
+            <div class="about-content3">
+              <h4>...Hobby</h4>
+              <img src="images/about2.jpg">
+            </div><!-- /.about-content3 -->  
+     </section><!-- /#about -->
+     <section class="about-button">
+        <div class="sub-nav">   
+          <nav>
+             <ul class="sub-nav"> 
+               <li><a href="#home">GO HOME...?</a></li>
+             </ul>
+          </nav>
+        </div>       
+     </section><!-- /.about-button -->
+     <section id="concept">
+              <div class="concept-content">
+                  <h2 class="page-title">CONCEPT</h2>
+                  <p><span>Gra</span>titudine,<span>Feli</span>cità,<span>A</span>ffidabilità</p>
+                  <ul class="menu">
+                    <li><span>感謝</span></li>
+                    <li><span>幸せ</span></li>
+                    <li><span>信頼</span></li>
+                  </ul>
+              </div><!-- /.concept-content -->
+     </section><!-- /#concept -->
+     <section class="concept-button">
+        <div class="sub-nav">   
+           <nav>
+              <ul class="sub-nav"> 
+                <li><a href="#about">GO ABOUT...?</a></li>
+              </ul>
+           </nav> 
+        </div>   
+     </section><!-- /.concept-button -->
+     <section id="work">
+        <div class="work-content">
+           <h2 class="page-title">WORK</h2>
+           <ul class="work-nav">
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+           </ul>
+        </div><!-- /.work-content -->
+     </section><!-- /#work -->
+     <section class="work-button">
+       <div class="sub-nav">   
+         <nav>
+            <ul class="sub-nav"> 
+              <li><a href="#concept">GO CONCEPT...?</a></li>
+            </ul>
+         </nav>
+       </div>  
+     </section><!-- /.work-button -->
+     <section id="skill">
+       <div class="skill-content">
+          <h2 class="page-title">SKILL</h2>
+          <p></p>
+          <ul class="menu">
+             <li></li>
+            <li></li>
+            <li></li>
+         </ul>
+       </div><!-- /.skill-content -->
+     </section><!-- /#skill -->
+     <section class="skill-button">
+        <div class="sub-nav">   
+         <nav>
+           <ul class="sub-nav"> 
+             <li><a href="#work">GO WORK...?</a></li>
+           </ul>
+         </nav>
+        </div>  
+     </section><!-- /.skill-button -->
+     <section id="contact">
+        <div class="contact-content">
+          <h2 class="page-title">CONTACT</h2>
+          <p></p>
+          <ul class="menu">
+            <li></li>
+            <li></li>
+            <li></li>
+         </ul>
+        </div><!-- /.contact-content -->
+     </section><!-- /#contact -->
+     <section class="contact-button">
+        <div class="sub-nav">   
+         <nav>
+            <ul class="sub-nav"> 
+              <li><a href="#skill">GO SKILL...?</a></li>
+            </ul>
+         </nav>
+       </div>     
+     </section><!-- /.contact-button -->
 
-     <div id="about">
-        <div class="about-content">
-          <h2 class="page-title">ABOUT</h2>
-           <hr class=”line″>
-           <p>１９９１年生まれ、九州生まれ九州育ち。２児の母。<br>
-              大学進学後、大手アパレル会社で販売職を経験。<br>
-              結婚・出産を機に販売職を退職し、その後保育園関係に就職。<br>
-              現在、WEBデザイナーになるためにオンラインスクールにて勉強中。<br>
-              今後はフリーランスとして活動する予定。<br>
-           </p>
-           <hr class=”line″>
-          <img src="images/about.jpg">
-        </div><!-- /.about-content -->
-        <div class="about-content2">
-          <h3>Character...</h3>
-          <img src="images/about1.jpg">
-          <h4>...Hobby</h4>
-          <img src="images/about2.jpg">
-        </div><!-- /.about-content2 --> 
-      </div>  
-    </body>
+    </body> 
 
 
 
